--- a/Level2/Challenges/Capstone-Challenge/style.css
+++ b/Level2/Challenges/Capstone-Challenge/style.css
@@ -5,7 +5,13 @@ body {
     justify-content: center;
     height: 100vh;
     background-color: darkgray;
-    gap: 10vw
+    gap: 10%;
+    font-family:"Montserrat", sans-serif;
+}
+
+h1, p {
+    margin:0;
+    padding: 0;
 }
 
 header {
@@ -42,6 +48,7 @@ header {
     font-size: 50px;
     font-weight: bold;
     margin-bottom: 10px; 
+    font-family: "Dancing Script", cursive;
 }
 
 #new-form{
@@ -50,39 +57,96 @@ header {
     margin-bottom: 20px;
     text-align: center;
     padding: 20px;
-    width: 20vw;
-    height: 45vh;
+    width: 20%;
+    height: 50%;
     border: 3px solid #464343;
     border-radius: 12px;
-    background-color: aliceblue;
+    background-color: rgb(218, 236, 252);
 }
-new-from>h2 {
+#new-form>h3 {
     border-bottom: 1px solid black;
+}
+
+.input {
+    border-radius: 10px;
+    border: none;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#submit {
+    background-color: lightblue;
+    color: rgb(85, 81, 81);
+    border-radius: 10px;
 }
 
 #list{
     display: flex;
     flex-direction: column;
+    align-items: center;
     position: relative;
-    width: 40%;
-    height: 45%;
+    width: 40vw;
+    height: 45vh;
+    overflow-y: scroll;
     border: 3px solid #464343;
+    border-radius: 10px;
     padding-top: 30px;
     padding-bottom: 30px;
+    background-color: rgb(218, 236, 252);
+    
+}
+
+#todo-item{
+    background-color: white;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    width: 80%;
+    max-width: 500px;
+    padding:10px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+#todo-title{
+    border-bottom: 1px solid black;
+}
+
+#todo-item img {
+    min-width: 120px;
+    min-height: 120px;
+    max-width: 150px;
+    max-height: 150px;
+    margin-bottom: 10px; 
+}
+
+#todo-buttons{
+    background-color: lightblue;
+    color: rgb(85, 81, 81);
+    border-radius: 5px;
 }
 
 footer {
     background-color: lightblue;
     width: 100%;
+    height: 5vh;
+    padding: 10px 0;
+    position: fixed;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     text-align: center;
     position: absolute;
     border-top: 1px solid black;
     left: 0;
     bottom: 0;
     
+    
 }
 
 #footer-section {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
