--- a/Level2/Challenges/Capstone-Challenge/style.css
+++ b/Level2/Challenges/Capstone-Challenge/style.css
@@ -3,10 +3,12 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
     background-color: darkgray;
     gap: 10%;
     font-family:"Montserrat", sans-serif;
+    margin-bottom: 100px;
+    margin-top: 200px;
 }
 
 h1, p {
@@ -14,14 +16,16 @@ h1, p {
     padding: 0;
 }
 
+
+
 header {
     background-color: lightblue;
     text-align: center;
     padding: 5px 0;
     width: 100%;
     height:5vh;
-    top: 0;
-    left: 0;
+    top: 0px;
+    left: 0px;
     position: absolute;
     border-bottom:1px solid black;
 }
@@ -43,6 +47,7 @@ header {
 }
 
 #title{
+    display:flex;
     position: absolute;
     top: 10%;
     font-size: 50px;
@@ -57,8 +62,8 @@ header {
     margin-bottom: 20px;
     text-align: center;
     padding: 20px;
-    width: 20%;
-    height: 50%;
+    width: 300px;
+    height: 400px;
     border: 3px solid #464343;
     border-radius: 12px;
     background-color: rgb(218, 236, 252);
@@ -86,8 +91,8 @@ header {
     flex-direction: column;
     align-items: center;
     position: relative;
-    width: 40vw;
-    height: 45vh;
+    width: 500px;
+    height: 400px;
     overflow-y: scroll;
     border: 3px solid #464343;
     border-radius: 10px;
@@ -132,22 +137,200 @@ header {
 footer {
     background-color: lightblue;
     width: 100%;
-    height: 5vh;
+    height: 50px;
     padding: 10px 0;
     position: fixed;
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    position: absolute;
     border-top: 1px solid black;
-    left: 0;
-    bottom: 0;
-    
-    
+    left: 0px;
+    bottom: 0px;
+       
 }
 
 #footer-section {
     display: flex;
     justify-content: center;
 }
+
+@media screen and (max-width: 820px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        background-color: rgb(133, 131, 131);
+        gap: 10%;
+        font-family:"Montserrat", sans-serif;
+        margin-top: 75px;
+    }
+
+    #title{
+        display:flex;
+        position: relative;
+        top: 10%;
+        font-size: 50px;
+        font-weight: bold;
+        margin-bottom: 10px; 
+        font-family: "Dancing Script", cursive;
+        height: 100px;
+    }
+
+    #new-form{
+        display: grid;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+        padding: 20px;
+        width: 300px;
+        height: 400px;
+        border: 3px solid #464343;
+        border-radius: 12px;
+        background-color: rgb(218, 236, 252);
+    }
+
+    .input {
+        border-radius: 10px;
+        border: none;
+        padding: 10px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        width: auto;
+    }
+
+    #todo-item{
+        background-color: white;
+        border-radius: 10px;
+        margin-bottom: 10px;
+        width: 300px;
+        
+        padding:10px;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    #list{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        width: 400px;
+        height: 400px;
+        overflow-y: scroll;
+        border: 3px solid #464343;
+        border-radius: 10px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        background-color: rgb(218, 236, 252);
+        
+    }
+}
+
+@media screen and (max-width: 480px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        background-color: rgb(250, 50, 50);
+        gap: 10%;
+        font-family:"Montserrat", sans-serif;
+        margin-top: 75px;
+    }
+
+    header, h2 , h1{
+        font-size: 10px;
+    }
+
+    #title{
+        display:flex;
+        position: relative;
+        top: 10%;
+        font-size: 30px;
+        width:400px;
+        margin-bottom: 10px; 
+        font-family: "Dancing Script", cursive;
+        height: 50px;
+    }
+
+    #new-form{
+        display: grid;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+        padding: 20px;
+        width: 200px;
+        height: 400px;
+        border: 3px solid #464343;
+        border-radius: 12px;
+        background-color: rgb(218, 236, 252);
+    }
+
+    .input {
+        border-radius: 10px;
+        border: none;
+        padding: 10px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        width: auto;
+    }
+
+    #todo-item{
+        background-color: white;
+        border-radius: 10px;
+        margin-bottom: 10px;
+        width: 200px;        
+        padding:10px;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    #list{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        width: 300px;
+        height: 400px;
+        
+        overflow-y: scroll;
+        border: 3px solid #464343;
+        border-radius: 10px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        background-color: rgb(218, 236, 252);
+        margin-bottom: 100px;
+        
+    }
+
+    footer{
+        height: auto;
+    }
+}
+
+@media screen and (max-width:844px) and (orientation: landscape) {
+    body{
+        height:100%;
+        margin-top:100px;
+    }
+
+    #new-form{
+        height: 250px;
+    }
+
+    #list{
+        height: 250px;
+}
+
+}
+
+
