--- a/Level3/Practice/scrimba/src/App.css
+++ b/Level3/Practice/scrimba/src/App.css
@@ -1,44 +1,60 @@
 * {
     box-sizing: border-box;
-    font-family: 'Poppins';
 }
 
 body {
     margin: 0;
-    }
-
-nav  {
-    height: 70px;
+    min-height: 100vh;
     display: flex;
-    padding-top: 22px;
-    padding-left: 30px;
-    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
-    }
+    align-items: center;
+    font-family: 'Inter', sans-serif;
+    background-color: whitesmoke;
+}
 
-.logo {
-    height:25px;
-    width: 82px; 
+.contacts {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.contact-card {
+    flex-basis: 225px;
+    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 13px;
+    padding-bottom: 20px;
+    background-color: white;
+    width:200px;
+}
+
+.contact-card > img {
+    width: 100%;
+    height: auto;
+    align-self: center;
+    border-radius: 5px;
+    object-fit: cover;
+}
+
+.contact-card > h3 {
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.info-group {
+    display: flex;
+    align-items: center;
+}
+
+.info-group > img {
+    height: 25px;
     
 }
 
-section {
-    padding: 20px;
-    }
-
-.hero {
-    display: flex;
-    flex-direction:column;
-}
-
-.hero--photo {
-    max-width: 400px;
-    align-self:  center;
-}
-
-.hero--header {
-    margin-bottom: 16px;
-}
-
-.hero--text {
-    margin-top: 0;
+.info-group > p {
+    margin-block: 3px;
+    font-size: 12px;
+    color: #2B283A;
 }
