--- a/Level3/Practice/scrimba/src/Airbnb-componets/AbnbApp.css
+++ b/Level3/Practice/scrimba/src/Airbnb-componets/AbnbApp.css
@@ -43,13 +43,30 @@ section {
     margin-top: 0;
 }
 
+.cards-list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
+}
+
 .card {
     width: 175px;
     font-size: 12px;
+    flex: 0 0 auto;         
+    display: flex;          
+    flex-direction: column;  
+    position: relative;
+}
+
+.card--title {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .card--img {
     width: 100%;
+    height:60%;
 }
 
 .card--stats{
@@ -62,10 +79,24 @@ section {
     width: 14px;
 }
 
+.card--price {
+    margin-top: auto;
+}
+
 .gray {
     color:#918E9B
 }
 
 p {
     margin:5px;
+}
+
+.card--badge {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
 }
