--- a/Level3/Practice/scrimba/src/Vacation/VacationApp.css
+++ b/Level3/Practice/scrimba/src/Vacation/VacationApp.css
@@ -18,6 +18,7 @@ body {
     background-color:rgb(11, 175, 240);
     height: 175px;
     width: 200px;
+    border-radius: 7px;
     }
 .cards-list {
     display: flex;
