--- a/Level3/Practice/scrimba/src/Friends/FriendApp.css
+++ b/Level3/Practice/scrimba/src/Friends/FriendApp.css
@@ -33,6 +33,8 @@ body{
     border:1px solid black;
 }
 
-p{
+p {
     text-decoration: underline;
+    text-transform:capitalize;
+    font-weight:600;
 }
