--- a/Level3/Practice/scrimba/src/Memegenerator/MemeApp.css
+++ b/Level3/Practice/scrimba/src/Memegenerator/MemeApp.css
@@ -66,8 +66,11 @@ main {
 }
 
 .meme-img{
-    max-width: 100%;
+    width: 700px;
+    height: 100%;
     border-radius: 3px;
+    margin-left: 30%;
+    margin-right: 30%;
        
 }
 
