--- a/Level4/Practice/UglyThings/vite-project/src/App.css
+++ b/Level4/Practice/UglyThings/vite-project/src/App.css
@@ -32,4 +32,14 @@
     margin:5px;
 }
 
+h1{
+    margin: 10px;
+    text-align: center;
+}
+
+img{
+    width: 350px;
+    margin-top: 10px;
+}
+
 
