--- a/Level4/Capstone/vite-project/src/App.css
+++ b/Level4/Capstone/vite-project/src/App.css
@@ -200,10 +200,31 @@
     border-top-color: #b52a2a;
     background: #b52a2a;
     color: #fee542;
+    
   }
 
-  .return{
+  .horde-return{
     color: white;
+    border-top: 1px solid #8b8f91;
+    background: #ff2424;
+    background: -webkit-gradient(linear, left top, left bottom, from(#9c3e3e), to(#ff2424));
+    background: -webkit-linear-gradient(top, #9c3e3e, #ff2424);
+    background: -moz-linear-gradient(top, #9c3e3e, #ff2424);
+    background: -ms-linear-gradient(top, #9c3e3e, #ff2424);
+    background: -o-linear-gradient(top, #9c3e3e, #ff2424);
+    padding: 4px 10px;
+    border-radius: 9px;
+    color: #ffe642;
+    vertical-align: middle;
+    text-align: center;
+    margin-left: 46.5%;
+    margin-top: 5px;
+  }
+
+  .horde-return:hover{
+    border-top-color: #b52a2a;
+    background: #b52a2a;
+    color: #fee542;
   }
 
   /* Alliance Styling */
@@ -275,6 +296,7 @@
     text-decoration: none;
     vertical-align: middle;
     text-align: center;
+    
   }
 
   .alliance-race-link:hover{
@@ -282,6 +304,41 @@
     background: #3b19fc;
     color: #fee542;
   }
+
+  .alliance-return{
+    border-top: 1px solid #8b8f91;
+    background: #265cff;
+    background: -webkit-gradient(linear, left top, left bottom, from(#4b2bff), to(#265cff));
+    background: -webkit-linear-gradient(top, #4b2bff, #265cff);
+    background: -moz-linear-gradient(top, #4b2bff, #265cff);
+    background: -ms-linear-gradient(top, #4b2bff, #265cff);
+    background: -o-linear-gradient(top, #4b2bff, #265cff);
+    padding: 4px 10px;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    border-radius: 9px;
+    -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+    -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+    box-shadow: rgba(0,0,0,1) 0 1px 0;
+    text-shadow: rgba(0,0,0,.4) 0 1px 0;
+    color: #fff308;
+    font-size: 15px;
+    font-family: Helvetica, Arial, Sans-Serif;
+    text-decoration: none;
+    vertical-align: middle;
+    text-align: center;
+    margin-left: 46.75%;
+    margin-top: 5px;
+  }
+
+  .alliance-return:hover{
+    
+    border-top-color: #3b19fc;
+    background: #3b19fc;
+    color: #fee542;
+  }
+
+  
   
 
   
