--- a/Level4/Capstone/vite-project/src/App.css
+++ b/Level4/Capstone/vite-project/src/App.css
@@ -129,9 +129,10 @@
   /* Horde Page Styling */
 
   .horde{
-    background-color: #ff2424;
+    background-color: #000000;
     background-image: url('Assets/Horde-Background.png');
     background-position: center;
+    background-repeat: no-repeat;
     background-size: 100%;
     height: 910px;
   }
@@ -153,14 +154,7 @@
     background-color: rgba(34, 32, 32, 0.7);    
   }
 
-  .race-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap:50px;
-
-  }
+  
 
   .horde-races{
     position: absolute;
@@ -195,6 +189,7 @@
     text-decoration: none;
     vertical-align: middle;
     text-align: center;
+    margin-bottom: 5px;
   }
 
   .horde-race-link:hover{
@@ -303,7 +298,7 @@
     text-decoration: none;
     vertical-align: middle;
     text-align: center;
-    
+    margin-top: 5px;
   }
 
   .alliance-race-link:hover{
@@ -474,6 +469,206 @@
     background-position: left;
     height: 910px;
     width: 100%;
+  }
+
+
+  /* Responsive */
+
+  @media only screen and (max-width:500px){
+
+    *{
+      font-size: 20px;
+    }
+    .selection{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items:center;    
+    }
+
+    .crest{
+      width: 150px;
+      height: 200px;
+      margin-bottom: auto;
+      margin-top: auto;
+    }
+
+    .main-button{
+      width:300px;
+      height: 200px;
+      margin-top: 0;
+    }
+
+    .intro{
+      margin-top: 10px;
+    }
+
+    .intro h1{
+      font-size: 15px;
+    }
+
+    .main-footer p{
+      font-size: 15px;
+    }
+
+    /* Horde Responsive Styling */
+
+    .horde-content{
+      display: flex;
+    }
+
+    .horde-bio{
+      position: absolute;
+      left:30px;
+      top:7%;
+      width: 400px;
+      text-align: center;
+      border:4px, ridge, grey;
+      border-radius: 10px;
+      padding: 20px;
+      background-color: rgba(34, 32, 32, 0.7);    
+    }
+
+
+    .horde-races{
+      position: absolute;
+      width: 300px;
+      top:70%;
+      right: 70px;
+      border:4px, ridge, grey;
+      border-radius: 10px;
+      padding: 20px;
+      background-color: rgba(34, 32, 32, 0.7);  
+          
+    }
+
+    .horde-return{
+      margin-left: 35%;
+    } 
+
+    /* Alliance Responsive styling */
+
+    .alliance-content{
+      display: flex;
+    }
+
+    .alliance-bio{
+      position: absolute;
+      left:30px;
+      top:5%;
+      width: 400px;
+      text-align: center;
+      border:4px, ridge, grey;
+      border-radius: 10px;
+      padding: 20px;
+      background-color: rgba(34, 32, 32, 0.7);    
+    }
+
+
+    .alliance-races{
+      position: absolute;
+      width: 300px;
+      top:68%;
+      right: 70px;
+      border:4px, ridge, grey;
+      border-radius: 10px;
+      padding: 20px;
+      background-color: rgba(34, 32, 32, 0.7);  
+          
+    }
+
+    .alliance-return{
+      margin-left: 35%;
+    }
+
+    .vl{
+      height:0;
+    }
+
+    .hl{
+      border-bottom: 5px ridge grey;
+      width: 500px;
+      position: absolute;
+      top:375px
+    }
+
+    .bio{
+      top:42%;
+      width: 400px;
+      right: 16px;
+    }
+
+    .class-list{
+      right:150px;
+      top:78%;
+      height:max-content;
+      width:max-content
+      
+      
+    }
+
+    
+
+    .dwarf{
+      background-position: top;
+      background-size: 100%;
+    }
+
+    .human .class-list{
+      height: 150px;
+    }
+
+    .human{
+      background-position: top;
+      background-size: 100%;
+    }
+
+    .nelf{
+      background-position: top;
+      background-size: 100%;
+    }
+
+    .gnome{
+      background-position: top;
+      background-size: 100%;
+
+    }
+
+    .orc{
+      background-position: top;
+      background-size: 100%;
+    }
+
+    .troll{
+      background-position: top;
+      background-size: 100%;
+    }
+
+    .troll .class-list{
+      height: 150px;
+    }
+
+    .tauren{
+      background-position: top;
+      background-size: 100%;
+    }
+
+    .tauren .class-list{
+      top:80%
+    }
+
+    .undead{
+      background-position: top;
+      background-size: 100%;
+    }
+
+    .undead .class-list{
+      top:79%
+
+    }
+
+
+
   }
 
   
