--- a/Level5/Capstone/client/src/style.css
+++ b/Level5/Capstone/client/src/style.css
@@ -1,16 +1,23 @@
 *{
     box-sizing: border-box;
     margin: 0;
+    font-family: 'Open-Sans';
+}
+
+@font-face {
+    font-family: 'Open-Sans';
+    src: url('./Assets/Open-Sans/OpenSans-VariableFont_wdth\,wght.ttf');
 }
 body{
-    background-color:mediumseagreen;
+    background-color:aquamarine;
 }
 
 .header{
     text-align: center;
     margin-bottom: 30px;
-    background-color: aqua;
-    height: 50px;
+    background-color:cyan;
+    height: 60px;
+    border-bottom: 3px ridge grey;
 }
 
 h1{
@@ -26,24 +33,31 @@ h1{
 .deposit-container{
     margin: 10px;
     text-align: center;
-    background-color: aquamarine;
+    background-color: cyan;
     width: auto;
+    height:fit-content;
+    border: 3px ridge grey;
+    border-radius: 5px;
 }
 
 .deposit{
     margin: 15px;
-    background-color: aquamarine;
+    background-color: cyan;
+    font-family: 'Open-Sans';
 }
 
 .withdrawal-container{
     margin: 10px;
     text-align: center;
-    background-color: aquamarine;
+    background-color: cyan;
+    height:fit-content;
+    border: 3px ridge grey;
+    border-radius: 5px;
 }
 
 .withdrawal{
     margin: 15px;
-    background-color: aquamarine;
+    background-color: cyan;
 }
 
 .delete-btn{
@@ -53,11 +67,30 @@ h1{
     border-radius: 5px;
 }
 
+.edit-btn{
+    margin: 15px;
+    height: 30px;
+    background-color:seagreen;
+    border-radius: 5px;
+}
+
 input{
     width: 100px;
     margin: 5px;
+    border-radius: 5px;
 }
 
 button{
     margin: 10px;
+    border-radius: 5px;
+}
+
+.final{
+    margin:auto;
+    text-align: center;
+    background-color: cyan;
+    height:fit-content;
+    width: fit-content;
+    border: 3px ridge grey;
+    border-radius: 5px;
 }
